@@ -1,5 +1,10 @@
 2015-05-08  Jason Merrill  <jason@redhat.com>
 
+	* cp-gimplify.c, parser.c: Adjust to -Wc++11-compat replacing
+	-Wc++0x-compat.
+
+2015-05-08  Jason Merrill  <jason@redhat.com>
+
 	* decl2.c (mangling_aliases): New variable.
 	(note_mangling_alias, generate_mangling_aliases): New.
 	(cp_write_global_declarations): Call generate_mangling_aliases.
