@@ -1,5 +1,8 @@
 2015-05-08  Jason Merrill  <jason@redhat.com>
 
+	* c.opt (Wc++11-compat): Make primary.  Rename var warn_cxx11_compat.
+	* c-opts.c: Adjust.
+
 	* c.opt (Wc++0x-compat): Also set cpp_warn_cxx11_compat.
 
 2015-05-08  Marek Polacek  <polacek@redhat.com>
